# CPP---Proyecto

./: README.md  Testeo.m
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  miprograma.cpp
src/lib/: CMakeLists.txt
src/lib/include/: Archivos.hpp  DFT.hpp  FFT.hpp
